--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-elements": "^3.4.2",
+    "react-native-flash-message": "^0.2.1",
     "react-native-gesture-handler": "^2.3.0",
+    "react-native-image-picker": "^4.8.4",
     "react-native-pager-view": "^5.4.11",
     "react-native-reanimated": "^2.4.1",
     "react-native-safe-area-context": "^4.1.2",
